[tool.poetry]
name = "staffslackbot"
version = "0.1.0"
description = "Slack bot that will have a user guessing game"
authors = ["ebdekock <rw@thewrongway.co.za>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
requests = "^2.21"
slackclient = "^1.3"
schedule = "^0.6.0"
loguru = "^0.2.5"
numpy = "^1.16"
scipy = "^1.2"
scikit-image = "^0.14.2"
matplotlib = "^3.0"
scikit-learn = "^0.20.2"
opencv-python-headless = "^4.0"
python-dotenv = "^0.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.660.0"
ipython = "^7.2"
black = { version = "*", allows-prereleases = true }
flake8 = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
